--- a/style.css
+++ b/style.css
@@ -178,10 +178,13 @@ hr {
     .blog-img {
         width: 100%;
     }
+    .half-width {
+        padding: 20px;
+    }
 }
 @media screen and (max-width: 768px) {
     .nav-bar,.half-width {
-        width: 96%;
+        width: 94%;
     }
     .player-container,.blog-container,.course-container {
         grid-template-columns: repeat(2,1fr);
@@ -194,8 +197,11 @@ hr {
     }
 }
 @media screen and (max-width: 576px) {
-    .nav-bar,.half-width {
-        width: 96%;
+    .half-width {
+        width: 94%;
+    }
+    .nav-bar {
+        width: 90%;;
     }
     .player-container,.blog-container,.course-container {
         grid-template-columns: repeat(1,1fr);
