--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
     color: #fff;
     font-size: 1.2rem;
 }
-.nav-bar,.logo-box,.nav-bar ul {
+.nav-bar,.nav-bar ul,.logo-box {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -197,11 +197,17 @@ hr {
     }
 }
 @media screen and (max-width: 576px) {
-    .half-width {
-        width: 94%;
+    .logo-box h1 {
+        font-size: 2.5rem;
     }
     .nav-bar {
-        width: 90%;;
+        flex-direction: column;
+    }
+    .nav-bar a {
+        font-size: 1.2rem;
+    }
+    .half-width {
+        width: 94%;
     }
     .player-container,.blog-container,.course-container {
         grid-template-columns: repeat(1,1fr);
